# athena

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.cu  run  tangent.m
app/: CMakeLists.txt  main.cpp
app/algebra/: CMakeLists.txt  Matrix.cu  Matrix.hpp  Point.hpp
app/common/: CMakeLists.txt  FastBuffer.hpp  Types.hpp  utils.cpp  utils.h
app/cpu/: CMakeLists.txt
app/cpu/algebra/: CMakeLists.txt  Coordinates.cpp  Coordinates.hpp  Matrix.hpp  Point.cpp
app/gpu/: CMakeLists.txt  hello.cu
ci/: check_build.py  check_style.py
concepts/: CMakeLists.txt  LoadVsDirectCompute.cu  LoadVsDirectCompute.hpp
ext/: CMakeLists.txt
inc/: Socket.hpp
inc/cpp/: HardwareManager.hpp  Perceptron.hpp
inc/cuda/: CudaVector.cuh  Vectorization.cuh
lib/: CMakeLists.txt
lib/algebra/cpu/: Vector.hpp
lib/algebra/gpu/: Vector.cuh
lib/geometry/: TrigonometryLUT.hpp
scripts/: ncu_TEST_LoadVsDirectCompute.sh
src/: Socket.cpp
src/cpp/: Perceptron.cpp  Socket.cpp  main.cpp
src/cuda/: CudaVector.cu  Vectorization.cu
sys/: CMakeLists.txt  SystemDefinitions.hpp
system/: CMakeLists.txt  SystemDefinitions.hpp
test/: CMakeLists.txt
test/math/: CMakeLists.txt  TestAlgebraMatrix.cpp  TestCoordinatesLib.cpp
test/plot/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/concepts/: CMakeLists.txt  TestLoadVsDirectCompute.cu
tests/math/: CMakeLists.txt
tests/plot/: CMakeLists.txt  main.cpp
